prevent title overlap

--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -12,7 +12,7 @@
 
 .site-title {
 	max-width: 11em;
-	font-size: 8vw;
+	font-size: calc(6vw + 2vh);
 	font-weight: 500;
 	line-height: 1;
 
